[tool.poetry]
name = "us-routing"
version = "0.1.0"
description = "US Routing is a Python library for fast local routing in the United States. Useful when approximations are acceptable."

authors = ["ivanbelenky <ivandietert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "3.11.9"
# python should be the latest 3.11 and less than 3.12
python = "^3.11,<3.12"
networkx = "^3.3"
pandas = "^2.2.2"
numpy = "^2.1.0"
pydantic = "^2.8.2"
geopandas = "^1.0.1"
tqdm = "^4.66.5"
requests = "^2.32.3"
rtree = "^1.3.0"
uszipcode = "^1.0.1"
sqlalchemy-mate = "2.0.0"
python-levenshtein = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipython = "^8.27.0"
openpyxl = "^3.1.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
